fix: removed additional visibility for header

--- a/packages/components/src/components/header/header.scss
+++ b/packages/components/src/components/header/header.scss
@@ -184,17 +184,14 @@
 
 [data-hide-on="mobile"] {
 	display: none;
-	visibility: hidden;
 
 	@include screen("m") {
 		display: inherit;
-		visibility: visible;
 	}
 }
 
 [data-hide-on="desktop"] {
 	@include screen("m") {
 		display: none;
-		visibility: hidden;
 	}
 }
